# homelab-airflow-dags

./: .cz.yaml  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamlfmt.yaml  404.html  CHANGELOG.md  README.md  Taskfile.yml  gen_home_pages.py  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: bump_version.yaml  ci-tests.yaml  deploy_docs.yaml  docker-release.yaml  docker_release.yaml  docs-deploy.yaml  lint.yaml  lint_and_unittest.yaml  package-release.yaml  release_build.yaml  version-bump.yaml
airflow/dags/: model_example.py  sync_deps.py
airflow/dags/system/: airflow-backup-configs.py  airflow-clear-missing-dags.py  airflow-db-cleanup.py  airflow-delete-broken-dags.py  airflow-kill-halted-tasks.py  airflow-log-cleanup-pwdless-ssh.py  airflow-log-cleanup.py  airflow-sla-miss-report.py  sync_deps.py  update_dep.py
docker/: .env  Dockerfile  docker-compose.yaml
docs/: gen_ref_pages.py
docs/getting-started/: installation.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
homelab_airflow_dags/: __init__.py  config.py  constants.py  core.py
homelab_airflow_dags/common_tasks/: oss_operator.py  oss_upload.py  polygon_task_clean.py  risk_management_task.py
homelab_airflow_dags/config/: risk_portfolio_config.yaml
homelab_airflow_dags/dags/: dag_factory.py  ibkr_account_snapshot.py  load_dag.py  model_example.py  risk_portfolio.py  test_dag.yaml  test_dag_v2.yaml  utils.py
homelab_airflow_dags/dags/system/: airflow-db-cleanup.py
reference/SUMMARY/: index.html
reference/homelab_airflow_dags/: index.html
reference/homelab_airflow_dags/common_tasks/: index.html
reference/homelab_airflow_dags/common_tasks/oss_operator/: index.html
reference/homelab_airflow_dags/common_tasks/risk_management_task/: index.html
reference/homelab_airflow_dags/config/: index.html
reference/homelab_airflow_dags/constants/: index.html
reference/homelab_airflow_dags/dags/: index.html
reference/homelab_airflow_dags/dags/ibkr_account_snapshot/: index.html
reference/homelab_airflow_dags/dags/load_dag/: index.html
reference/homelab_airflow_dags/dags/my_dags/: index.html
reference/homelab_airflow_dags/dags/risk_portfolio/: index.html
search/: search_index.json
tests/: __init__.py  test_import.py
