[project]
name = "homelab_airflow_dags"
version = "0.1.0"
description = "homelab cluster airflow dags"
authors = [
    {name = "Shawn Deng", email = "shawndeng1109@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "apache-airflow==2.10.5",
    "dag-factory>=0.22.0",
    "fake-useragent>=2.2.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "commitizen>=3.12.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "homelab_airflow_dags/**/*.py"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D"   # pydocstyle
]

ignore = [
    "W191", # indentation contains tabs
    "D401"  # imperative mood
]

extend-ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
