[project]
name = "homelab_airflow_dags"
version = "0.3.3"
description = "homelab cluster airflow dags"
authors = [
    {name = "Shawn Deng", email = "shawndeng1109@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "apache-airflow==2.11.0",
    "dag-factory==0.23.0a4",
    "fake-useragent>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "commitizen>=3.12.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
